# pos-lab

./: db.sqlite3  pyproject.toml
inventory/: admin.py  forms.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py
inventory/templatetags/: tags_file.py
lab/: settings.py  urls.py
stocks/: models.py
templates/: base.html
templates/inventory/: create_view.html  list_view.html  update_view.html
