[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["NKoroi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
django-bootstrap5 = "^23.1"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
